# nnplugins

./: NEWS  README.md  meson.build  meson_options.txt
src/: Makefile.am  gstbbdecode.c  gstbbdecode.h  gstplugin.c  gstplugin.h  gstssddecode.c  gstssddecode.h  gsttensordecode.c  gsttensordecode.h  libtensordecode.c  libtensordecode.cpp  libtensordecode.h
tests/: libtests.c  libtests.h  meson.build  test_segmap_quantized_tflite.c  test_segmap_tflite.c
tests/bbdecode/: meson.build  test_object_detection_tflite.c  test_object_detection_tflite_with_webcam.c
tests/ssddecode/: meson.build  test_object_detection_tflite.c  test_object_detection_tflite_batched.c
